Fixed post list spacing

--- a/src/scss/components/_ListPosts.scss
+++ b/src/scss/components/_ListPosts.scss
@@ -1,5 +1,6 @@
 .PostContainer {
-  margin: 5vh;
+  margin-top: 4vh;
+  margin-bottom: 4vh;
   background-color: #324359;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   text-decoration: none;
